# Neural-network-Quantization-Study

./: CMakeLists.txt  README.md  requirements.txt
cuda_kernels/include/: gemm_int8.cuh  quantize.cuh
cuda_kernels/src/: benchmark.cu  gemm_int8.cu  quantize.cu
cuda_kernels/tests/: test_gemm.cu  test_quantize.cu
datasets/: dataset_loader.py
docs/daily_log/: day_001.md
docs/paper/: report_draft.md
experiments/ptq/: run_ptq.py
experiments/sensitivity/: layer_sweep.py
models/: model_loader.py
scripts/: build_kernels.sh  setup.sh
tools/: plot_results.py
